--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ tr .edit, .delete{
 	font-size: inherit;
 }
 
+input-field{
+  font: 2em;
+}
+
  input[type=submit], input[type=reset] {
   background-color: #4CAF50; 
   color:#fff;
