--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
   z-index: 997;
 }
 
+#logTable{
+  padding-top: 15px;
+}
+
 #logTable table td:nth-child(0),th:nth-child(0){
 	display: none;
 }
@@ -33,8 +37,6 @@ tr .edit, .delete{
 	font-size: inherit;
 }
 
-
-
  input[type=submit], input[type=reset] {
   background-color: #4CAF50; 
   color:#fff;
@@ -50,7 +52,9 @@ tr .edit, .delete{
   cursor: pointer;
 }
 
-
+#log{
+  padding-top: 100px;
+}
 
 main { 
 	min-height: 500px;
